--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ add_executable(test
     test.vert
     frag.spv
     test.frag
+    cube.vert
+    cube_vert.spv
 )
 target_link_libraries(test PUBLIC vulkan_helper)
 set_target_properties(test PROPERTIES CXX_STANDARD 23)
@@ -20,6 +22,12 @@ add_custom_command(OUTPUT vert.spv
               ${CMAKE_CURRENT_SOURCE_DIR}/test.vert
   MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/test.vert
   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/test.vert Vulkan::glslangValidator)
+
+add_custom_command(OUTPUT cube_vert.spv
+  COMMAND Vulkan::glslangValidator --target-env vulkan1.3
+              ${CMAKE_CURRENT_SOURCE_DIR}/cube.vert -o cube_vert.spv
+  MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/cube.vert
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/cube.vert Vulkan::glslangValidator)
 
   add_custom_command(OUTPUT frag.spv
   COMMAND Vulkan::glslangValidator --target-env vulkan1.3
