Make cube rotate.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ add_executable(test
     test.frag
     cube.vert
     cube_vert.spv
+    cube.frag
+    cube_frag.spv
 )
 target_link_libraries(test PUBLIC vulkan_helper)
 set_target_properties(test PROPERTIES CXX_STANDARD 23)
@@ -34,3 +36,9 @@ add_custom_command(OUTPUT cube_vert.spv
               ${CMAKE_CURRENT_SOURCE_DIR}/test.frag
   MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/test.frag
   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/test.frag Vulkan::glslangValidator)
+
+  add_custom_command(OUTPUT cube_frag.spv
+  COMMAND Vulkan::glslangValidator --target-env vulkan1.3
+              ${CMAKE_CURRENT_SOURCE_DIR}/cube.frag -o cube_frag.spv
+  MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/cube.frag
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/cube.frag Vulkan::glslangValidator)
